[gd_scene load_steps=9 format=3 uid="uid://bvx5qopw80oij"]

[ext_resource type="Script" path="res://scripts/element.gd" id="1_6rw7o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_igmef"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xb4hq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u5je3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_um4el"]
bg_color = Color(0.18359, 0.18359, 0.18359, 0.392157)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uj56m"]
bg_color = Color(0.18359, 0.18359, 0.18359, 0.392157)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d241y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x5rxd"]

[node name="ArrayElement" type="TabContainer"]
tooltip_text = "Set variable type"
theme_override_font_sizes/font_size = 24
tab_alignment = 1
current_tab = 0
tab_focus_mode = 0
script = ExtResource("1_6rw7o")

[node name="String" type="VBoxContainer" parent="."]
layout_mode = 2
metadata/_tab_index = 0

[node name="HSeparator" type="HSeparator" parent="String"]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxEmpty_igmef")

[node name="Label" type="Label" parent="String"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Set String Text"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="String"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TextEdit" type="TextEdit" parent="String"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
placeholder_text = "Enter text"
wrap_mode = 1
caret_blink = true

[node name="Numeral" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="HSeparator" type="HSeparator" parent="Numeral"]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxEmpty_xb4hq")

[node name="Label" type="Label" parent="Numeral"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Set Float/Int Number"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Numeral"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SpinBox" type="SpinBox" parent="Numeral"]
layout_mode = 2
step = 0.01
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true
select_all_on_focus = true

[node name="Bool" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="HSeparator" type="HSeparator" parent="Bool"]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxEmpty_u5je3")

[node name="Label" type="Label" parent="Bool"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Set Bool"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Bool"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="CheckButton" type="CheckButton" parent="Bool"]
custom_minimum_size = Vector2(150, 32)
layout_mode = 2
focus_mode = 0
theme_override_constants/align_to_largest_stylebox = 1
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_um4el")
theme_override_styles/hover = SubResource("StyleBoxFlat_uj56m")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_d241y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_x5rxd")
text = "false"
alignment = 1

[node name="Delete" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="HSeparator" type="HSeparator" parent="Delete"]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxEmpty_xb4hq")

[node name="Label" type="Label" parent="Delete"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Delete Element"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Delete"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="DeleteButton" type="Button" parent="Delete"]
layout_mode = 2
focus_mode = 0
text = "Delete"

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="text_changed" from="String/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="value_changed" from="Numeral/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="toggled" from="Bool/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Delete/DeleteButton" to="." method="_on_delete_button_pressed"]
